<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="weighted_pull_up_key"
        android:title="@string/pref_title_pull_up"
        android:summary="@string/pref_summary_pull_up"/>

    <EditTextPreference
        android:key="double_front_squat_key"
        android:title="@string/pref_title_front_squat"
        android:summary="@string/pref_summary_front_squat"/>

    <EditTextPreference
        android:key="double_clean_and_press_key"
        android:title="@string/pref_title_double_clean_press"
        android:summary="@string/pref_summary_double_clean_press"/>

    <EditTextPreference
        android:key="single_leg_deadlift_key"
        android:title="@string/pref_title_single_leg_deadlift"
        android:summary="@string/pref_summary_single_leg_deadlift"/>

    <EditTextPreference
        android:key="double_kb_deadlift_key"
        android:title="@string/pref_title_double_kb_deadlift"
        android:summary="@string/pref_summary_double_kb_deadlift"/>

    <EditTextPreference
        android:key="bent_press_key"
        android:title="@string/pref_title_bent_press"
        android:summary="@string/pref_summary_bent_press"/>

</PreferenceScreen>